Fix a bug that IO thread error should block parallel requests.

We send parallel requests after sending the initial request and
initializing download file.

However, an IO thread error may occur during download resumption between
file initialized and building parallel request, we should check this
error, or may hit the following DCHECK:
DCHECK_LE(initial_request_offset_, first_slice_offset);
Because we clear |received_slices_| in DownloadItemImpl::Start when
interrupt reason is not none.

Bug: 754544, 736046
Change-Id: I2d15469bb787411b5ecdeb0f40028f5527574c9f
Reviewed-on: https://chromium-review.googlesource.com/611609
Reviewed-by: David Trainor <dtrainor@chromium.org>
Commit-Queue: Xing Liu <xingliu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#493808}
Former-commit-id: 0f2c5ddcaba532562888e6effb626c64b9064b4b