content/browser/download/parallel_download_job.cc
@@ -134,8 +134,10 @@ void ParallelDownloadJob::OnByteStreamReady(
 void ParallelDownloadJob::BuildParallelRequests() {
   DCHECK(!requests_sent_);
   DCHECK(!is_paused());
-  if (is_canceled_)
+  if (is_canceled_ ||
+      download_item_->GetLastReason() != DOWNLOAD_INTERRUPT_REASON_NONE) {
     return;
+  }
 
   // TODO(qinmin): The size of |slices_to_download| should be no larger than
   // |kParallelRequestCount| unless |kParallelRequestCount| is changed after
